# softdeskp10

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
issue_com_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
issue_com_app/migrations/: 0001_initial.py
proj_contrib_app/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
proj_contrib_app/migrations/: 0001_initial.py
softdesk/: asgi.py  permissions.py  settings.py  urls.py  views.py  wsgi.py
softdesk/templates/: base.html  home.html  navbar.html
softdesk/templates/rest_framework/: base.html
user_app/: apps.py  forms.py  models.py  serializers.py  urls.py  views.py
user_app/migrations/: 0001_initial.py
user_app/templates/user_app/: account_deleted.html  delete_account.html  error.html  login.html  profile.html  register.html
